--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,8 @@ plugins {
     id 'maven-publish'
 }
 
-sourceCompatibility = 16
+sourceCompatibility = 11
+targetCompatibility = 11
 
 group = 'gs.mclo.java'
 version = '2.0.0'
