--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import org.apache.tools.ant.filters.ReplaceTokens
+
 plugins {
     id 'java-library'
     id 'maven-publish'
@@ -42,7 +44,7 @@ jar {
 publishing {
     publications {
         mavenJava(MavenPublication) {
-            artifactId = 'java'
+            artifactId = 'api'
             from components.java
             pom {
                 name = 'mclo.gs API'
