--- a/build.gradle
+++ b/build.gradle
@@ -16,10 +16,10 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.3'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.3'
+    testImplementation(libs.junit.api)
+    testRuntimeOnly(libs.junit.engine)
 
-    implementation 'com.google.code.gson:gson:2.10.1'
+    implementation(libs.gson)
 }
 
 test {
