--- a/build.gradle
+++ b/build.gradle
@@ -80,8 +80,9 @@ publishing {
 
     repositories {
         maven {
-            def releaseRepo = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/"
-            def snapshotRepo = "https://s01.oss.sonatype.org/content/repositories/snapshots/"
+            // https://central.sonatype.org/publish/publish-portal-ossrh-staging-api/
+            def releaseRepo = "https://ossrh-staging-api.central.sonatype.com/service/local/staging/deploy/maven2/"
+            def snapshotRepo = "https://central.sonatype.com/repository/maven-snapshots/"
             url = isReleaseVersion ? releaseRepo : snapshotRepo
             credentials {
                 username = findProperty('OSSRH_USERNAME')
