--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,8 +23,10 @@ jobs:
           JRELEASER_GPG_PUBLIC_KEY: ${{ secrets.ATERNOS_GPG_SIGNING_PUBLIC_KEY }}
           JRELEASER_GPG_PASSPHRASE: ${{ secrets.ATERNOS_GPG_SIGNING_PASSPHRASE }}
           JRELEASER_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          ORG_GRADLE_PROJECT_OSSRH_USERNAME: ${{ secrets.SONATYPE_OSSRH_USERNAME }}
-          ORG_GRADLE_PROJECT_OSSRH_PASSWORD: ${{ secrets.SONATYPE_OSSRH_PASSWORD }}
+          JRELEASER_NEXUS2_USERNAME: ${{ secrets.SONATYPE_OSSRH_USERNAME }}
+          JRELEASER_NEXUS2_TOKEN: ${{ secrets.SONATYPE_OSSRH_PASSWORD }}
+          JRELEASER_MAVENCENTRAL_USERNAME: ${{ secrets.SONATYPE_OSSRH_USERNAME }}
+          JRELEASER_MAVENCENTRAL_TOKEN: ${{ secrets.SONATYPE_OSSRH_PASSWORD }}
         run: ./gradlew clean publish jreleaserDeploy --no-daemon -Prelease=${{ github.ref_name }}
       - name: Create Release
         uses: softprops/action-gh-release@v2
