--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,14 +9,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: Set up Java
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 11
           cache: 'gradle'
+
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
+
       - name: Publish to Maven Central
         env:
           JRELEASER_GPG_SECRET_KEY: ${{ secrets.ATERNOS_GPG_SIGNING_KEY }}
@@ -28,10 +31,14 @@ jobs:
           JRELEASER_MAVENCENTRAL_USERNAME: ${{ secrets.SONATYPE_OSSRH_USERNAME }}
           JRELEASER_MAVENCENTRAL_TOKEN: ${{ secrets.SONATYPE_OSSRH_PASSWORD }}
         run: ./gradlew clean publish jreleaserDeploy --no-daemon -Prelease=${{ github.ref_name }}
+
+      - name: Generate Release Body
+        run: ./gradlew generateReleaseBody
+
       - name: Create Release
         uses: softprops/action-gh-release@v2
         with:
           files: |
             ./build/libs/mclogs-*.jar
-          body_path: ${{ github.workspace }}/CHANGELOG.md
+          body_path: ${{ github.workspace }}/release-body.md
           name: v${{ github.ref_name }}
