--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ repositories {
 dependencies {
     compileOnly(libs.jetbrains.annotations)
     testImplementation(libs.junit.api)
+    testImplementation(libs.junit.params)
     testRuntimeOnly(libs.junit.engine)
 
     implementation(libs.gson)
