--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,7 @@ jobs:
     strategy:
       matrix:
         java: [11, 17, 21]
+      fail-fast: false
     steps:
       - uses: actions/checkout@v4
       - name: Set up Java
@@ -17,4 +18,4 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
       - name: Build with Gradle
-        run: ./gradlew build --no-daemon
+        run: ./gradlew build --no-daemon --info
