--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ repositories {
 
 dependencies {
     compileOnly(libs.jetbrains.annotations)
+    testCompileOnly(libs.jetbrains.annotations)
     testImplementation(libs.junit.api)
     testImplementation(libs.junit.params)
     testRuntimeOnly(libs.junit.engine)
